# foch

./: .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  ALPHA_ANNOUNCEMENT.md  CONTEXT.md  Cargo.toml  KNOWN_ISSUES.md  KNOWN_LIMITATIONS.md  README.md  package.json
apps/foch-cli/: Cargo.toml
apps/foch-cli/src/: main.rs
apps/foch-cli/src/cli/: arg.rs
apps/foch-cli/src/cli/handler/: data.rs  graph.rs  merge.rs  merge_plan.rs  mod.rs  simplify.rs
apps/foch-cli/src/cli/handler/check/: mod.rs
apps/foch-cli/src/cli/handler/config/: set.rs  show.rs
apps/foch-cli/tests/: cli_integration.rs
crates/foch-cli/: Cargo.toml
crates/foch-cli/src/: lib.rs  lsp.rs  main.rs
crates/foch-cli/src/cli/: arg.rs
crates/foch-cli/src/cli/handler/: cache.rs  data.rs  graph.rs  merge.rs  merge_plan.rs  mod.rs  simplify.rs  workspace.rs
crates/foch-cli/src/cli/handler/check/: mod.rs
crates/foch-cli/src/cli/handler/config/: mod.rs  set.rs  show.rs  validate.rs
crates/foch-cli/src/tui/: conflict_handler.rs  mod.rs
crates/foch-cli/tests/: cli_integration.rs
crates/foch-cli/tests/fixtures/lsp/events/: diagnostics.txt  sample.txt
crates/foch-core/: Cargo.toml
crates/foch-core/src/: cache.rs  config.rs  fingerprint.rs  lib.rs  model.rs  text.rs
crates/foch-core/src/domain/: dep_resolution.rs  descriptor.rs  game.rs  mod.rs  playlist.rs
crates/foch-core/src/model/: analysis.rs  document.rs  merge.rs  mod.rs  scope.rs  semantic.rs  workspace.rs
crates/foch-core/src/utils/: steam.rs
crates/foch-cwt/: Cargo.toml
crates/foch-cwt/src/: binding.rs  compiled.rs  error.rs  init.rs  lib.rs  pack.rs  schema.rs
crates/foch-cwt/tests/: binding.rs  binding_baseline.rs  compiled.rs
crates/foch-cwt/tests/fixtures/: binding_baseline.json  cwtools_binding_baseline.json
crates/foch-cwt/tests/fixtures/binding/: events.cwt  missions.cwt
crates/foch-engine/: Cargo.toml
crates/foch-engine/src/: base_data.rs  config.rs  emit.rs  lib.rs  request.rs  run_checks.rs
crates/foch-engine/src/base_data/: coverage.rs  mod.rs  tests.rs
crates/foch-engine/src/cache/: dag_base_cache.rs  generation.rs  layer.rs  mod.rs  mod_diff_cache.rs  mod_parse_cache.rs  modset_cache.rs  parsed_scripts.rs
crates/foch-engine/src/graph/: build.rs  export.rs  mod.rs  model.rs  render_dot.rs  semantic.rs
crates/foch-engine/src/graph/modules/: cluster.rs  mod.rs  model.rs  project.rs  report.rs
crates/foch-engine/src/merge/: boolean.rs  conflict_handler.rs  conflict_view.rs  cwt_suggestions.rs  dag.rs  emit.rs  error.rs  execute.rs  handler_registry.rs  ir.rs  localisation_merge.rs  materialize.rs  mod.rs  namespace.rs  normalize.rs  patch.rs  patch_apply.rs  patch_deps.rs  patch_merge.rs  patch_real_mods.rs  plan.rs  stale_vanilla.rs  tui_conflict_handler.rs
crates/foch-engine/src/merge/output/: localisation_merge.rs  materialize.rs  mod.rs  stale_vanilla.rs
crates/foch-engine/src/merge/patch_engine/: mod.rs  normalize.rs  patch.rs  patch_apply.rs  patch_merge.rs
crates/foch-engine/src/merge/planning/: dag.rs  mod.rs  module_view.rs  patch_deps.rs
crates/foch-engine/src/merge/resolution/: conflict_handler.rs  conflict_view.rs  handler_registry.rs  mod.rs
crates/foch-engine/src/merge/structured/: ast_adapter.rs  control_flow.rs  definition_module.rs  merge.rs  mod.rs  policy.rs  tests.rs  trivia.rs
crates/foch-engine/src/runtime/: binding.rs  mod.rs  overlap.rs
crates/foch-engine/src/simplify/: execute.rs
crates/foch-engine/src/workspace/: cache.rs  file_filter.rs  mod.rs  resolve.rs  scripts.rs  session.rs
crates/foch-engine/tests/: check_engine.rs  emit_seam.rs  graph_modules.rs  merge_e2e.rs  merge_fatal_cache.rs  merge_fatal_reason.rs  merge_governments_base.rs  patch_real_mods.rs  serde_bench.rs
crates/foch-language/: Cargo.toml
crates/foch-language/src/: analysis_version.rs  lib.rs
crates/foch-language/src/analyzer/: analysis.rs  content_family.rs  definition_module.rs  documents.rs  eu4_builtin.rs  eu4_profile.rs  localisation.rs  mod.rs  param_contracts.rs  parser.rs  report.rs  rules.rs  semantic_index.rs  syntax_bridge.rs  vanilla_index.rs  visibility.rs
crates/foch-language/src/analyzer/semantic_index/: extractors.rs  mod.rs  parse_cache.rs  scope_rules.rs  tests.rs
crates/foch-language/src/cwt/: interpret.rs  mod.rs  model.rs
crates/foch-language/src/data/: eu4_base_snapshot_builtin_test_1_0_0.json  eu4_builtin_catalog.json
crates/foch-language/src/validator/: enum_check.rs  finding.rs  mod.rs  unknown_key_check.rs
crates/foch-language/tests/: cwt_container_scope_diff.rs  cwt_schema.rs  cwt_scope_diff.rs  semantic_corpus.rs  syntax_bridge_equivalence.rs  vanilla_fallback.rs
crates/foch-merge-kernel/: Cargo.toml  NOTICE.md  README.md
crates/foch-merge-kernel/src/: class_mapping.rs  conflict.rs  lib.rs  matching.rs  merge.rs  pcs.rs  policy.rs  provenance.rs  tree.rs
crates/foch-merge-quality/: Cargo.toml  corpus.json
crates/foch-merge-quality/dataset/: README.md  dataset.json  measurements.jsonl  object_records.jsonl  observations.jsonl  snapshots.jsonl
crates/foch-merge-quality/src/: archive.rs  common_module.rs  common_probe.rs  config.rs  corpus.rs  corpus_shadow.rs  dataset.rs  fetch.rs  fixtures.rs  lib.rs  lifecycle.rs  object_store.rs  orchestrate.rs  report.rs  score.rs  secrets.rs  shadow.rs  steam.rs  symbols.rs
crates/foch-merge-quality/tests/: corpus.rs  lifecycle.rs  orchestrate.rs  scoring.rs  shadow.rs
crates/foch-merge-quality/tests/common/: mod.rs
crates/foch-merge-quality/tests/fixtures/: .gitattributes  CREDITS.md  basegame-manifest.json  expected.json  legacy-baseline.json
crates/foch-syntax/: Cargo.toml
crates/foch-syntax/src/: error.rs  lib.rs  tree.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: common.rs  property_apply_patches.rs  property_clausewitz_parser.rs  property_decode_paradox_bytes.rs  property_diff_ast.rs  property_merge_patch_sets.rs
research/merge-bo/: README.md  pyproject.toml
research/merge-bo/merge_bo/: __init__.py  foch_oracle.py  gate0.py
(+457 files in other folders)
