[workspace]
resolver = "2"
members = [
	"apps/foch-cli",
	"crates/foch-core",
	"crates/foch-engine",
	"crates/foch-language",
	"packages/tree-sitter-paradox",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/Acture/foch"
repository = "https://github.com/Acture/foch"
keywords = ["paradox", "eu4", "modding", "lsp", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
bincode = "1.3.3"
rkyv = "0.8"
clap = { version = "4.5.51", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
console = "0.16.1"
dirs = "6.0.0"
encoding_rs = "0.8.35"
flate2 = "1.1.5"
home = "0.5.12"
jomini = "0.29.0"
regex = "1.12.2"
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.15.0"
tiny_http = "0.12.0"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
toml = "0.9.8"
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
walkdir = "2.5.0"
winreg = "0.55.0"
