[package]
name = "foch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
default-run = "foch"
description = "Paradox mod static analysis toolkit with CLI and EU4-focused language tooling"

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
foch-core = { path = "../../crates/foch-core" }
foch-engine = { path = "../../crates/foch-engine" }
foch-language = { path = "../../crates/foch-language" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
tiny_http.workspace = true
toml.workspace = true

[features]
# Opt-in build flag for parser/semantic-index dev tools.
# `cargo install --path crates/foch-cli` (the default user path) installs only
# `foch`; pass `--features dev-tools` to also build `parse_stats` and
# `symbol_dump`, which are debugging utilities for the parser and
# semantic-index maintainers (raw-directory inputs, ad-hoc arg parsing, no
# playset/config plumbing). Keeping them off by default avoids polluting
# the user-facing `~/.cargo/bin/` namespace.
dev-tools = []

[[bin]]
name = "foch"
path = "src/main.rs"

[[bin]]
name = "parse_stats"
path = "src/bin/parse_stats.rs"
required-features = ["dev-tools"]

[[bin]]
name = "symbol_dump"
path = "src/bin/symbol_dump.rs"
required-features = ["dev-tools"]

