[package]
name = "foch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
home.workspace = true
jomini.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true

[dev-dependencies]
tempfile.workspace = true

