[package]
name = "foch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.5.5"
chardetng = "1.0.0"
dirs.workspace = true
encoding_rs.workspace = true
globset.workspace = true
home.workspace = true
jomini.workspace = true
regex.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true

[dev-dependencies]
tempfile.workspace = true

