[package]
name = "foch-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bincode.workspace = true
console.workspace = true
dirs.workspace = true
flate2.workspace = true
foch-core = { path = "../foch-core" }
foch-language = { path = "../foch-language" }
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
