[package]
name = "foch-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bincode.workspace = true
rkyv.workspace = true
console.workspace = true
dirs.workspace = true
flate2.workspace = true
globset.workspace = true
foch-core = { path = "../foch-core" }
foch-language = { path = "../foch-language" }
atty = "0.2"
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
toml_edit = "0.23"
tracing.workspace = true
walkdir.workspace = true
ratatui = "0.30.0"
crossterm = "0.29.0"

[dev-dependencies]
bincode2 = { package = "bincode", version = "2.0.0-rc.3", features = ["serde"] }
bitcode = { version = "0.6", features = ["serde"] }
postcard = { version = "1", features = ["alloc"] }
tempfile.workspace = true
