[package]
name = "foch-language"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
console.workspace = true
dirs.workspace = true
encoding_rs.workspace = true
foch-core = { path = "../foch-core" }
foch-cwt = { path = "../foch-cwt" }
filetime = "0.2"
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true

[dev-dependencies]
foch-core = { path = "../foch-core", features = ["test-utils"] }
foch-syntax = { path = "../foch-syntax" }
tempfile.workspace = true
