[package]
name = "foch-merge-quality"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Measures foch's merge quality against community compatibility patches (compatches) as human ground truth."

[features]
# Network + SteamCMD orchestration (discovery/fetch). Off by default so the
# scoring test and CI compile without reqwest's TLS stack. The committed
# fixtures make scoring fully reproducible offline.
default = []
steam = ["dep:reqwest"]

[[bin]]
name = "foch-mq"
path = "src/bin/foch_mq.rs"

[dependencies]
foch-engine = { path = "../foch-engine" }
foch-core = { path = "../foch-core" }
foch-language = { path = "../foch-language" }
blake3 = "1.5.5"
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
walkdir.workspace = true
tempfile.workspace = true
tar.workspace = true
flate2.workspace = true
time.workspace = true
zstd.workspace = true
reqwest = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"
