[package]
name = "foch-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
foch-core = { path = "../foch-core" }
tree-sitter = "0.22"
tree-sitter-paradox = { path = "../../packages/tree-sitter-paradox" }
