[project]
name = "merge-bo"
version = "0.0.1"
description = "Bayesian optimization of EU4 mod-merge validity (research harness driving the foch CLI)"
readme = "README.md"
requires-python = ">=3.11"
# Gate 0 / Gate 1 + the foch oracle adapter are stdlib-only on purpose: nothing
# here should pull torch until Gate 0 proves the optimization target has signal.
# Track A (kernel/surrogate/acquisition) adds botorch+gpytorch under [project.optional-dependencies].
dependencies = []

[project.optional-dependencies]
method = [
    "botorch>=0.12",
    "gpytorch>=1.13",
    "numpy>=1.26",
]

[dependency-groups]
dev = ["ruff>=0.6", "ty>=0.0.1a1"]

[project.scripts]
merge-bo-gate0 = "merge_bo.gate0:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["merge_bo"]

[tool.ruff]
target-version = "py311"
line-length = 100
